resources_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: customer-churn
  name: customer-churn-v2
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: customer-churn
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: customer-churn
        version: v2 #Deploy another version of the model, v2.#New deployment has updated version label version=v2
    spec:
      containers:
      - args:
        - --port=9000
        - --rest_api_port=8500
        - --model_name=customer-churn
        - --model_base_path=/tmp/saved_model_customer_churn
        command:
        - /usr/bin/tensorflow_model_server
        image: masroorhasan/tensorflow-serving:cpu #Updated Docker image masroorhasan/tensorflow-serving:cpu is a pre-built CPU optimized binary.
        imagePullPolicy: IfNotPresent
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 30
          tcpSocket:
            port: 9000
        name: customer-churn
        ports:
        - containerPort: 9000
        - containerPort: 8500
        resources:
          limits:
            cpu: "4"
            memory: 4Gi
          requests:
            cpu: "1"
            memory: 1Gi
