gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  # name: customer-churn-serving-gateway
  name: kubeflow-gateway

spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 31400
      name: http
      protocol: HTTP
    hosts:
    - "*"
