resources.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: customerchurn
  name: customerchurn-service
  namespace: kubeflow
spec:
  ports:
  - name: grpc-tf-serving
    port: 9000
    targetPort: 9000
  - name: http-tf-serving
    port: 8500
    targetPort: 8500
  selector:
    app: customerchurn
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: customerchurn
  name: customerchurn-v1
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: customerchurn
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: customerchurn
        version: v1
    spec:
      containers:
      - args:
        - --port=9000
        - --rest_api_port=8500
        - --model_name=customerchurn
        - --model_base_path=s3://customerchurn-repo/savedmodel
        - --monitoring_config_file=/var/config/monitoring_config.txt
        command:
        - /usr/bin/tensorflow_model_server
        image: tensorflow/serving:1.11.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 30
          tcpSocket:
            port: 9000
        name: customerchurn
        ports:
        - containerPort: 9000
        - containerPort: 8500
        resources:
          limits:
            cpu: "4"
            memory: 4Gi
          requests:
            cpu: "1"
            memory: 1Gi
#         volumeMounts:
#         - mountPath: /var/config/
#           name: config-volume
#       volumes:
#       - configMap:
#           name: config-volume
#         name: config-volume
# ---
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: config-volume
# data:
#   models.conf: |+
#     model_config_list: {
#       config: {
#         name: "resnet",
#         base_path: "s3://customerchurn-repo/savedmodel",
#         model_platform: "tensorflow",
#         model_version_policy: {
#           specific: {
#             versions: 1
#           }
#         }
#       }
#     }
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  labels:
  name: customerchurn-service
  namespace: kubeflow
spec:
  host: customerchurn-service
  subsets:
  - labels:
      version: v1
    name: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
  name: customerchurn-service
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - method:
        exact: POST
      uri:
        prefix: /tfserving/models/customerchurn
    rewrite:
      uri: /v1/models/customerchurn:predict
    route:
    - destination:
        host: customerchurn-service
        port:
          number: 8500
        subset: v1
      weight: 100
