resources_gcp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: customerchurn
  name: customerchurn-service
  # namespace: kubeflow
  namespace: tfserving
spec:
  ports:
  - name: grpc-tf-serving
    port: 9000
    targetPort: 9000
  - name: http-tf-serving
    port: 8500
    targetPort: 8500
  selector:
    app: customerchurn
  # type: ClusterIP
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: customerchurn
  name: customerchurn-v1
  # namespace: kubeflow
  namespace: tfserving
spec:
  selector:
    matchLabels:
      app: customerchurn
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: customerchurn
        version: v1
    spec:
      containers:
      - args:
        - --port=9000
        - --rest_api_port=8500
        - --model_name=customerchurn
        # - --model_base_path=s3://customerchurn-repo/savedmodel
        - --model_base_path=gs://mavencode-churn-model/customer-churn/churn01
        # - --model_config_file=/serving/models/config/models.conf
        # - --file_system_poll_wait_seconds=2147483647
        # - --monitoring_config_file=/var/config/monitoring_config.txt
        command:
        - /usr/bin/tensorflow_model_server
        # env:
        # - name: AWS_ACCESS_KEY_ID
        #   valueFrom:
        #     secretKeyRef:
        #       key: AWS_ACCESS_KEY_ID
        #       name: secretname
        # - name: AWS_SECRET_ACCESS_KEY
        #   valueFrom:
        #     secretKeyRef:
        #       key: AWS_SECRET_ACCESS_KEY
        #       name: secretname
        # - name: AWS_REGION
        #   value: us-east-1
        # - name: S3_USE_HTTPS
        #   value: "true"
        # - name: S3_VERIFY_SSL
        #   value: "true"
        # - name: S3_ENDPOINT
        #   value: s3.us-east-1.amazonaws.com
        image: tensorflow/serving:1.11.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          initialDelaySeconds: 30 #initialDelaySeconds: 30
          periodSeconds: 30
          tcpSocket:
            port: 9000
        name: customerchurn
        ports:
        - containerPort: 9000
        - containerPort: 8500
        # resources:
        #   limits:
        #     cpu: "4"
        #     memory: 4Gi
        #   requests:
        #     cpu: "1"
        #     memory: 1Gi
#         volumeMounts:
#         - mountPath: /serving/models/config #/var/config/
#           name: config-volume
#       volumes:
#       - configMap:
#           name: config-volume #s3-config
#         name: config-volume
# ---
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: config-volume
#   namespace: tfserving
# data:
#   models.conf: |+
#     model_config_list: {
#       config: {
#         name: "customerchurn",
#         base_path: "gs://mavencode-churn-model/customer-churn/churn01",
#         model_platform: "tensorflow",
#         model_version_policy: {
#           specific: {
#             versions: 1
#           }
#         }
#       }
#     }
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: config-volume
#   # namespace: default
# data:
#   special.how: very
#   special.type: charm
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  labels:
  name: customerchurn-service
  # namespace: kubeflow
  namespace: tfserving
spec:
  host: customerchurn-service
  subsets:
  - labels:
      version: v1
    name: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
  name: customerchurn-service
  # namespace: kubeflow
  namespace: tfserving
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - method:
        exact: POST
      uri:
        prefix: /tfserving/models/customerchurn
    rewrite:
      uri: /v1/models/customerchurn:predict
    route:
    - destination:
        host: customerchurn-service
        port:
          number: 8500
        subset: v1
      weight: 100
