resources_microk8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: half-plus-two
  name: half-plus-two-service
  namespace: kubeflow
spec:
  ports:
  - name: grpc-tf-serving
    port: 9000
    targetPort: 9000
  - name: http-tf-serving
    port: 8500
    targetPort: 8500
  selector:
    app: half-plus-two
  # type: ClusterIP
  clusterIP: 10.152.183.80
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.0.2.127
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: half-plus-two
  name: half-plus-two-v1
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: half-plus-two
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: half-plus-two
        version: v1
    spec:
      containers:
      - args:
        - --port=9000
        - --rest_api_port=8500
        - --model_name=half-plus-two
        - --model_base_path=/home/ubuntu/serving/tensorflow_serving/servables/tensorflow/testdata/saved_model_half_plus_two_cpu
        command:
        - /usr/bin/tensorflow_model_server
        image: tensorflow/serving:1.11.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 30
          tcpSocket:
            port: 9000
        name: half-plus-two
        ports:
        - containerPort: 9000
        - containerPort: 8500
        resources:
          limits:
            cpu: "4"
            memory: 4Gi
          requests:
            cpu: "1"
            memory: 1Gi
        volumeMounts:
        - mountPath: /var/config/
          name: config-volume
      volumes:
      - configMap:
          name: half-plus-two-v1-config
        name: config-volume
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  labels:
  name: half-plus-two-service
  namespace: kubeflow
spec:
  host: half-plus-two-service
  subsets:
  - labels:
      version: v1
    name: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
  name: half-plus-two-service
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - method:
        exact: POST
      uri:
        prefix: /tfserving/models/half-plus-two
    rewrite:
      uri: /v1/models/half-plus-two:predict
    route:
    - destination:
        host: half-plus-two-service
        port:
          number: 8500
        subset: v1
      weight: 100
