v2_canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  labels:
  name: customer-churn-service
  namespace: kubeflow
spec:
  host: customer-churn-service
  trafficPolicy: #Added
    loadBalancer: #Added
      simple: ROUND_ROBIN #Added
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2 #Added
    labels: #Added
      version: v2 #Added
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
  name: customer-churn-service
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - method:
        exact: POST
      uri:
        prefix: /tfserving/models/customer-churn
    rewrite:
      uri: /v1/models/customer-churn:predict
    route:
    - destination:
        host: customer-churn-service
        port:
          number: 8500
        subset: v1
      weight: 70 #Changed from 100 to 70
    - destination: #Added
        host: customer-churn-service #Added
        port: #Added
          number: 8500 #Added
        subset: v2 #Added
      weight: 30 #Added
